--- a/z1.html
+++ b/z1.html
@@ -20,11 +20,11 @@
 <h2>  Dovzhyk </h2><br>
 <h3>  Dovzhyk </h3><br> 		   
 <h1>  Dovzhyk </h1><br>  
-<p align="right"> <font color="red" size="3" face="Arial"> :) - uśmiechnięta buźka </font> </p> <br>
-<p align="right"> <font color="green" size="3" face="Arial"> :] - twarz zawartości </font> </p> <br>
-<p align="right"> <font color="blue" size="3" face="Arial"> ^_^ - Nerdie Poundie </font> </p> <br>
-<p align="right"> <font color="yellow" size="3" face="Arial"> <3 - serce </font> </p> <br>
-<p align="right"> <font color="purple" size="3" face="Arial"> XD - śmiejący się przez łzy </font> </p> <br>
-<p align="right"> <font color="orange" size="3" face="Arial"> o_o - zasłaniana twarz </font> </p> <br>
+<p align="right"> <font color="red" size="3" face="Courier New"> :) - uśmiechnięta buźka </font> </p> <br>
+<p align="right"> <font color="green" size="3" face="Courier New"> :] - twarz zawartości </font> </p> <br>
+<p align="right"> <font color="blue" size="3" face="Times New Roman"> ^_^ - Nerdie Poundie </font> </p> <br>
+<p align="right"> <font color="yellow" size="3" face="Times New Roman"> <3 - serce </font> </p> <br>
+<p align="right"> <font color="purple" size="3" face="Verdana"> XD - śmiejący się przez łzy </font> </p> <br>
+<p align="right"> <font color="orange" size="3" face="Verdana"> o_o - zasłaniana twarz </font> </p> <br>
    	   </body> 
       </html> 
