--- a/z4.html
+++ b/z4.html
@@ -27,5 +27,24 @@
 				<LI>Gigabyte B760 DS3H AX DDR5
 				<LI>ASRock Z790 PG Lightning
 			</UL>
+	   
+ 	  <font>Interfejsy o transmisji cyfrowej</font>
+			<OL type=1 start=4>
+				<LI>USB
+				<LI>DVI-D
+				<LI>HDMI
+			</OL>
+	   <font>Interfejsy o transmisji analogowej</font>
+			<OL type=A start=4>
+				<LI>VGA
+				<LI>RCA
+				<LI>DVI-A
+			</OL>
+	   <font>Interfejsy o transmisji asynchronicznej</font>
+			<OL type=I start=4>
+				<LI>RS232
+				<LI>LPT
+				<LI>PS/2
+			</OL>
 	   </body> 
       </html> 
