--- a/z4.html
+++ b/z4.html
@@ -28,7 +28,9 @@
 				<LI>ASRock Z790 PG Lightning
 			</UL>
 	   
- 	  <font>Interfejsy o transmisji cyfrowej</font>
+ 	  	<h1> poniżej są  trzy numerowania z różnymi znakami wyliczenia</h1> 
+		<h1> Ty zaproponuj swoje, związane z informatyką</h1>
+	   <font>Interfejsy o transmisji cyfrowej</font>
 			<OL type=1 start=4>
 				<LI>USB
 				<LI>DVI-D
