--- a/z4.html
+++ b/z4.html
@@ -28,8 +28,8 @@
 				<LI>ASRock Z790 PG Lightning
 			</UL>
 	   
- 	  	<h1> poniżej są  trzy numerowania z różnymi znakami wyliczenia</h1> 
-		<h1> Ty zaproponuj swoje, związane z informatyką</h1>
+ 	  	<h2> poniżej są  trzy numerowania z różnymi znakami wyliczenia</h2> 
+		<h2> Ty zaproponuj swoje, związane z informatyką</h2>
 	   <font>Interfejsy o transmisji cyfrowej</font>
 			<OL type=1 start=4>
 				<LI>USB
@@ -48,5 +48,29 @@
 				<LI>LPT
 				<LI>PS/2
 			</OL>
+
+	  <h3> poniżej będą trzy poziomy numerowania/wyliczenia z różnymi rodzajami numerowania/wyliczenia</h3>
+	  <h3> Ty zaproponuj swoje, związane z informatyką</h3>
+		   <OL type=I start=3>
+			   <LI>Języki napisania programów i stron internetowcyh
+			   <OL type=A start=3>
+				   <LI>Języki napisania programów
+				   <UL type=circle>
+					<LI>Python
+					<LI>Java
+					<LI>C++
+					<LI>C#
+					<LI>Ruby
+				   </UL>
+				   <LI>Języki napisania stron internetowych
+				   <UL type=circle>
+					<LI>HTML
+					<LI>CSS
+					<LI>JavaScript
+					<LI>PHP
+					<LI>TypeScript
+				   </UL>
+			   </OL>	   
+		   </OL>    
 	   </body> 
       </html> 
