--- a/z5.html
+++ b/z5.html
@@ -43,11 +43,11 @@ Rozmawia dwóch kolegów :<br>
 <HR SIZE=7 WIDTH=30% ALIGN=right  COLOR=purple>                  
 </fieldset>
 
-<IMG SRC="C:\Users\dddov\Downloads\gif\5.gif" ALIGN=right BORDER=16 WIDTH=102 HEIGHT=108 ALT=„gif5”>
-<IMG SRC="C:\Users\dddov\Downloads\gif\4.gif" ALIGN=left BORDER=17 WIDTH=107 HEIGHT=102 ALT=„gif4”>
-<IMG SRC="C:\Users\dddov\Downloads\gif\3.gif" ALIGN=right BORDER=18 WIDTH=108 HEIGHT=102 ALT=„gif3”>
-<IMG SRC="C:\Users\dddov\Downloads\gif\2.gif" ALIGN=left BORDER=12 WIDTH=102 HEIGHT=107 ALT=„gif2”>
-<IMG SRC="C:\Users\dddov\Downloads\gif\1.gif" ALIGN=right BORDER=12 WIDTH=102 HEIGHT=108 ALT=„gif1”><br>
+<IMG SRC="https://github.com/KurtSpire/html/blob/main/gif/5.gif" ALIGN=right BORDER=16 WIDTH=102 HEIGHT=108 ALT=„gif5”>
+<IMG SRC="https://github.com/KurtSpire/html/blob/main/gif/4.gif" ALIGN=left BORDER=17 WIDTH=107 HEIGHT=102 ALT=„gif4”>
+<IMG SRC="https://github.com/KurtSpire/html/blob/main/gif/3.gif" ALIGN=right BORDER=18 WIDTH=108 HEIGHT=102 ALT=„gif3”>
+<IMG SRC="https://github.com/KurtSpire/html/blob/main/gif/2.gif" ALIGN=left BORDER=12 WIDTH=102 HEIGHT=107 ALT=„gif2”>
+<IMG SRC="https://github.com/KurtSpire/html/blob/main/gif/1.gif" ALIGN=right BORDER=12 WIDTH=102 HEIGHT=108 ALT=„gif1”><br>
 
 
 <br><br><br><br><br><br>
