--- a/z5.html
+++ b/z5.html
@@ -43,7 +43,7 @@ Rozmawia dwóch kolegów :<br>
 <HR SIZE=7 WIDTH=30% ALIGN=right  COLOR=purple>                  
 </fieldset>
 
-<IMG SRC="https://github.com/KurtSpire/html/blob/main/gif/1.gif" ALIGN=right BORDER=16 WIDTH=102 HEIGHT=108 ALT=„gif5”>
+<IMG SRC="https://media2.giphy.com/media/VIPdgcooFJHtC/200.webp?cid=82a1493b72dym3q618o6ampc44sdxe9993ae7ogdu4qgv19v&ep=v1_gifs_trending&rid=200.webp&ct=g" ALIGN=right BORDER=16 WIDTH=102 HEIGHT=108 ALT=„gif5”>
 <IMG SRC="https://github.com/KurtSpire/html/blob/main/gif/4.gif" ALIGN=left BORDER=17 WIDTH=107 HEIGHT=102 ALT=„gif4”>
 <IMG SRC="https://github.com/KurtSpire/html/blob/main/gif/3.gif" ALIGN=right BORDER=18 WIDTH=108 HEIGHT=102 ALT=„gif3”>
 <IMG SRC="https://github.com/KurtSpire/html/blob/main/gif/2.gif" ALIGN=left BORDER=12 WIDTH=102 HEIGHT=107 ALT=„gif2”>
