--- a/z5.html
+++ b/z5.html
@@ -44,7 +44,7 @@ Rozmawia dwóch kolegów :<br>
 </fieldset>
 
 <IMG SRC="https://ibb.co/cxZYVNv" ALIGN=right BORDER=16 WIDTH=102 HEIGHT=108 ALT=„gif5”>
-<IMG SRC="https://github.com/KurtSpire/html/blob/main/gif/4.gif" ALIGN=left BORDER=17 WIDTH=107 HEIGHT=102 ALT=„gif4”>
+<IMG SRC="https://i.postimg.cc/cLw7N7vc/5.webp" ALIGN=left BORDER=17 WIDTH=107 HEIGHT=102 ALT=„gif4”>
 <IMG SRC="https://github.com/KurtSpire/html/blob/main/gif/3.gif" ALIGN=right BORDER=18 WIDTH=108 HEIGHT=102 ALT=„gif3”>
 <IMG SRC="https://github.com/KurtSpire/html/blob/main/gif/2.gif" ALIGN=left BORDER=12 WIDTH=102 HEIGHT=107 ALT=„gif2”>
 <IMG SRC="https://github.com/KurtSpire/html/blob/main/gif/1.gif" ALIGN=right BORDER=12 WIDTH=102 HEIGHT=108 ALT=„gif1”><br>
