--- a/z5.html
+++ b/z5.html
@@ -43,11 +43,11 @@ Rozmawia dwóch kolegów :<br>
 <HR SIZE=7 WIDTH=30% ALIGN=right  COLOR=purple>                  
 </fieldset>
 
-<IMG SRC="https://ibb.co/cxZYVNv" ALIGN=right BORDER=16 WIDTH=102 HEIGHT=108 ALT=„gif5”>
-<IMG SRC="https://i.postimg.cc/cLw7N7vc/5.webp" ALIGN=left BORDER=17 WIDTH=107 HEIGHT=102 ALT=„gif4”>
-<IMG SRC="https://github.com/KurtSpire/html/blob/main/gif/3.gif" ALIGN=right BORDER=18 WIDTH=108 HEIGHT=102 ALT=„gif3”>
-<IMG SRC="https://github.com/KurtSpire/html/blob/main/gif/2.gif" ALIGN=left BORDER=12 WIDTH=102 HEIGHT=107 ALT=„gif2”>
-<IMG SRC="https://postimg.cc/dhQZ2ym7" ALIGN=right BORDER=12 WIDTH=102 HEIGHT=108 ALT=„gif1”><br>
+<IMG SRC="https://i.postimg.cc/cLw7N7vc/5.webp" ALIGN=right BORDER=16 WIDTH=102 HEIGHT=108 ALT=„gif5”>
+<IMG SRC="https://i.postimg.cc/YCTWjvWC/4.webp" ALIGN=left BORDER=17 WIDTH=107 HEIGHT=102 ALT=„gif4”>
+<IMG SRC="https://i.postimg.cc/j2kj916S/3.webp" ALIGN=right BORDER=18 WIDTH=108 HEIGHT=102 ALT=„gif3”>
+<IMG SRC="https://i.postimg.cc/y80VXxGd/2.webp" ALIGN=left BORDER=12 WIDTH=102 HEIGHT=107 ALT=„gif2”>
+<IMG SRC="https://i.postimg.cc/FK9QyZcW/1.gif" ALIGN=right BORDER=12 WIDTH=102 HEIGHT=108 ALT=„gif1”><br>
 
 
 <br><br><br><br><br><br>
