--- a/z5.html
+++ b/z5.html
@@ -7,7 +7,7 @@
 				 <meta name="opis"content="strona z 3 dowcipami na różne tematy">
              	<title> Dmytro Dovzhyk</title>   <!--Imię i nazwisko autora - Dmytro Dozvhyk/Szkoła - Technikum nr. 13/Klasa - 2G-->
      	   </head> 
-   	   <body bgcolor="green">
+   	   <body bgcolor="wheat">
 <br><br><br>
 
 
