--- a/z1.html
+++ b/z1.html
@@ -26,5 +26,6 @@
 <p align="right"> <font color="yellow" size="3" face="Times New Roman"> <3 - serce </font> </p> <br>
 <p align="right"> <font color="purple" size="3" face="Verdana"> XD - śmiejący się przez łzy </font> </p> <br>
 <p align="right"> <font color="orange" size="3" face="Verdana"> o_o - zasłaniana twarz </font> </p> <br>
+<a href="https://kurtspire.github.io/html/strona_główna.html">Powróć do strony głównej z zadaniami</a><br>
    	   </body> 
       </html> 
