--- a/z2.html
+++ b/z2.html
@@ -12,5 +12,6 @@
 <p align="center"> <font color="blue" size="4" face="Calibri"> Data urodzenia - 8 czerwca 1988 </font> </p> <br> 
 <p align="right"> <font color="orange" size="5" face=" Areal"> H<sub>2</sub>SO<sub>4</sub> </font>  </p> <br> 
 <p align="right"> <font color="orange" size="5" face=" Areal"> x*x=x<sup>2</sup> </font> </p> <br> 
+<a href="https://kurtspire.github.io/html/strona_główna.html">Powróć do strony głównej z zadaniami</a><br>
    	   </body> 
       </html> 
