--- a/z4.html
+++ b/z4.html
@@ -71,6 +71,7 @@
 					<LI>TypeScript
 				   </UL>
 			   </OL>	   
-		   </OL>    
+		   </OL>  <br>
+<a href="https://kurtspire.github.io/html/strona_główna.html">Powróć do strony głównej z zadaniami</a><br>
 	   </body> 
       </html> 
