--- a/z5.html
+++ b/z5.html
@@ -53,7 +53,8 @@
 <font>&#38; &#160; &#60; &#160; &#62; &#160; &#161; &#160; &#162; &#160;
  &#163; &#160; &#164;  <br> 
  imie nazwisko <br>
- Dmytro&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Dozvhyk
+ Dmytro&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Dozvhyk <br>
+	<a href="https://kurtspire.github.io/html/strona_główna.html">Powróć do strony głównej z zadaniami</a><br>
  </font>
    	   </body> 
       </html> 
