--- a/z6/z6.html
+++ b/z6/z6.html
@@ -44,9 +44,9 @@
 		<LI><A HREF="#sro"> Środek tekstu </A> <br>  
 		<LI><A HREF="tabela_Dovzhyk.html"> Tabela </A> <br>  
 		<LI><A HREF="formularz_Dovzhyk.html"> Formularz </A> <br> 
-	</OL>
+	</OL>	
 	</font>
-	</footer>
-
+	</footer> <br>
+<a href="https://kurtspire.github.io/html/strona_główna.html">Powróć do strony głównej z zadaniami</a><br>
     </body> 
   </html> 
