--- a/z3.html
+++ b/z3.html
@@ -47,7 +47,7 @@ Rozmawia dwóch kolegów :<br>
  &#163; &#160; &#164;  <br> 
  imie nazwisko <br>
  Dmytro&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Dozvhyk <br>
- <a href="https://kurtspire.github.io/html/strona_główna.html">Powróć do strony głównej z zadaniami</a><br>
+ <a href="https://kurtspire.github.io/html/strona_główna.html"><h2>Powróć do strony głównej z zadaniami</h2></a><br>
  </font>
    	   </body> 
       </html> 
