--- a/z4.html
+++ b/z4.html
@@ -72,6 +72,6 @@
 				   </UL>
 			   </OL>	   
 		   </OL>  <br>
-<a href="https://kurtspire.github.io/html/strona_główna.html">Powróć do strony głównej z zadaniami</a><br>
+<a href="https://kurtspire.github.io/html/strona_główna.html"><h2>Powróć do strony głównej z zadaniami</h2></a><br>
 	   </body> 
       </html> 
