--- a/z6/z6.html
+++ b/z6/z6.html
@@ -47,6 +47,6 @@
 	</OL>	
 	</font>
 	</footer> <br>
-<a href="https://kurtspire.github.io/html/strona_główna.html">Powróć do strony głównej z zadaniami</a><br>
+<a href="https://kurtspire.github.io/html/strona_główna.html"><h2>Powróć do strony głównej z zadaniami</h2></a><br>
     </body> 
   </html> 
