--- a/z6/z6.html
+++ b/z6/z6.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html> 
 <html lang="pl-PL"> 
-<html> 
      <head> 
         <meta charset="utf-8"> 
         <title>Dovzhyk Dmytro</title>
@@ -18,16 +17,17 @@
      </head> 
 
      <body> 
-	<font size=5><OL type=I><font size=5><b>Treść tej strony:</font>
-		<p align="left"> 
+	<OL type=I><font size=5><b>Treść tej strony:<b></font>
+		<p align="left"> <font size=5>
 		<LI><A HREF="poczta_Dovzhyk.html"> Poczta </A> <br>
 		<LI><A HREF="plik_Dovzhyk.html"> Plik </A> <br> 
 		<LI><A HREF="#poc"> Początek tekstu </A> <br>
 		<LI><A HREF="#kon"> Koniec tekstu </A> <br>  
 		<LI><A HREF="tabela_Dovzhyk.html"> Tabela </A> <br>  
 		<LI><A HREF="formularz_Dovzhyk.html"> Formularz </A> <br> 
+		</font>
 	</OL>
-	</font>
+	
 
 	<a name="poc"></a></a><p><font size="6">&#160;&#160;Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Phasellus faucibus scelerisque eleifend donec pretium vulputate sapien nec sagittis aliquam. Mauris ultrices eros in cursus turpis massa tincidunt dui. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Maecenas accumsan lacus vel facilisis volutpat. Integer vitae justo eget magna fermentum iaculis eu non.</font></p>
 
@@ -36,16 +36,17 @@
 	<a name="kon"></a><p><font size="6">&#160;&#160;Sed risus ultricies tristique nulla aliquet. Ornare suspendisse sed nisi lacus sed viverra tellus in hac. Urna nec tincidunt praesent semper feugiat nibh sed. Cras tincidunt lobortis feugiat vivamus at augue eget arcu dictum. Dictum fusce ut placerat orci nulla. Pretium quam vulputate dignissim suspendisse in est ante in. Quis blandit turpis cursus in hac habitasse platea. Venenatis tellus in metus vulputate eu scelerisque felis imperdiet. Amet aliquam id diam maecenas ultricies. At tempor commodo ullamcorper a lacus vestibulum sed arcu. Mauris augue neque gravida in fermentum et sollicitudin.</font></p>
     
 	<footer>
-	<font size=5><OL type=I><font size=5><b>Treść tej strony:</font>
-		<p align="left"> 
+	<OL type=I><font size=5><b>Treść tej strony:<b></font>
+		<p align="left"> <font size=5>
 		<LI><A HREF="poczta_Dovzhyk.html"> Poczta </A> <br>
 		<LI><A HREF="plik_Dovzhyk.html"> Plik </A> <br> 
 		<LI><A HREF="#poc"> Początek tekstu </A> <br>
 		<LI><A HREF="#sro"> Środek tekstu </A> <br>  
 		<LI><A HREF="tabela_Dovzhyk.html"> Tabela </A> <br>  
 		<LI><A HREF="formularz_Dovzhyk.html"> Formularz </A> <br> 
+		</font>
 	</OL>	
-	</font>
+	
 	</footer> <br>
 <a href="https://kurtspire.github.io/html/strona_główna.html"><h2>Powróć do strony głównej z zadaniami</h2></a><br>
     </body> 
