strona_główna.html

--- a/strona_główna.html
+++ b/strona_główna.html
@@ -14,8 +14,8 @@
 <a href="https://kurtspire.github.io/html/z3.html">Zadanie 3 </a><br>
 <a href="https://kurtspire.github.io/html/z4.html">Zadanie 4 </a><br>
 <a href="https://kurtspire.github.io/html/z5.html">Zadanie 5 </a><br> 
-<a href="https://kurtspire.github.io/html/z6/z6.html">Zadanie 6 </a><br>
-<a href="https://kurtspire.github.io/html/z7.html">Zadanie 7 </a><br>
+<a href="https://kurtspire.github.io/html/z6/z6.html">Zadanie 6 </a><br><br>
+<a href="https://github.com/KurtSpire/html">Strona z kodem wszytskich zadań </a><br>
 </font>
 
    	   </body> 
