--- a/z6/plik_Dovzhyk.html
+++ b/z6/plik_Dovzhyk.html
@@ -7,6 +7,6 @@
      </head> 
     <body> 
 	<A href ="arbuz.zip">Link do sciągania pliku</A> <br><br>
-	<A HREF="z6.html"> Powróć do strony głównej </A> <br> 
+	<A HREF="https://kurtspire.github.io/-html-/zadania.html"> Powróć do strony głównej </A> <br> 
     </body> 
   </html> 
