--- a/z6/poczta_Dovzhyk.html
+++ b/z6/poczta_Dovzhyk.html
@@ -7,6 +7,6 @@
      </head> 
     <body> 
 	<A href ="mailto:dddovzhik@gmail.com"><img src="https://i.postimg.cc/X7CbHCtW/gmail-logo.webp" border=0 width=70 height=50>Moja poczta</A> <br><br>
- 	<A HREF="z6.html"> Powróć do strony głównej </A> <br> 
+ 	<A HREF="https://kurtspire.github.io/-html-/zadania.html"> Powróć do strony głównej </A> <br> 
     </body> 
   </html> 
